# workoutGUI

./: CMakeLists.txt  Model.cpp  Model.h  README.md  convict.db  convict.sql  enter.sh  main.cpp  query.c  query.h  run.sh  util.mm
CMake/: gwf_module.cmake
src/: CMakeLists.txt  database.cpp  database.hpp  main-new-screen.cpp  main.cpp  tableSql.cpp
